--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
     <string name="app_name">Auction</string>
 
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+    <string name="start">Start</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="slide1">Tip: Its better to give than to receive</string>
+    <string name="slide2">Tip: Dont easily give the money</string>
+    <string name="slide3">Tip: Honesty can get you a living and honest is the best policy</string>
 </resources>
