--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Auction</string>
+    <string name="app_name">Online Auction</string>
 
     <string name="next">Next</string>
     <string name="skip">Skip</string>
@@ -12,4 +12,7 @@
     <string name="slide1">Tip: Its better to give than to receive</string>
     <string name="slide2">Tip: Dont easily give the money</string>
     <string name="slide3">Tip: Honesty can get you a living and honest is the best policy</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
